# ptProjects

./: .gitignore  .project  .pylintrc  README.md  api.py  main.py  main2.py  pyproject.toml  requirements-dev.txt  runner.py  setup.cfg  start.bat
HTML_L1/: Part1.css  advanced.html  basics.html  boxing.css  boxing.html  part1_css.html
dkb/: __init__.py  api.py  cfg.py  db.py  dkb.py  exc.py  orm.py
dkb/db/: category_table.py  class_table.py  constructor.py  db_api.py  dkb_table.py  meta_table.py
dkb/fl/: file_loader.py
dkb/tp_gui/: callback.py  constructor.py  pages.py
dkb/xls/: exc.py  open_xls.py
dkb_p/: example.db  haushalt.xlsm
dkb_p/csv/: 1001670081.csv  1002570080.csv  1002570081.csv  test1.csv
doc/: bat.md  design.drawio  git_basics.md  info.md  log.md  releasenotes.md  sql.md  test_spec.csv  tests.md  ug.md
fl/: fileLoader.py
my_dj_stuff/customadmin/: manage.py
my_dj_stuff/dj_app_template/: boot_django.py  load_tests.py  makemigrations.py  pyproject.toml  requirements.txt
my_dj_stuff/dj_app_template/dj_project/dj_project/: asgi.py  settings.py  urls.py  wsgi.py
my_dj_stuff/dj_app_template/src/dj_app1/: apps.py
my_dj_stuff/first_p/: manage.py
my_dj_stuff/level2/: populate_level2.py
projects/common_docs/: README.md  mkdocs.yml  pyproject.toml
projects/finhelper/: pyproject.toml
sandbox/: main.py  main_test.py
src/: acafSpecMerge.py  fbl_specMerger.py  main.py  specMerger.py
src/acaf/: Interpreter.py
src/app/: fileImport.py  regelwerk.py  rif.py  rmExceptions.py
src/dkb/: db.py  dkb.py  fileLoader.py
src/xls/: XlHandler.py
test/: api_cmd_test.py  api_test.py  cat_test.py  conftest.py  context.py  db_handler_test.py  db_test.py  dbfixes.py  dkb_import_test.py  importer_test.py  mock_sandbox_test.py  xls_test.py  xlsfixes.py
test/fixtures/: Haushaltskosten.xlsx  db-test.db  db2test.db  db2test_copy.db  fin.xsd  haushalt.xlsm  main_DB.db  move.csv  project.xml  test.xlsx  test.xml  test1.csv  test2.csv  test3.csv  test4.csv  test_db.db  tst-small.csv  tst-small2.csv  tst.db  tst2.csv
test/temp/: 1001670080.csv  (+2 more)
(+167 files in other folders)
