[project]
name = "ptprojects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.8",
    "mkdocstrings>=0.29.0",
    "pyright>=1.1.396",
    "pytest>=8.3.5",
    "ruff>=0.11.0",
    "strictdoc>=0.7.0",
]

[tool.uv.workspace]
members = ["projects/finhelper", "projects/common_docs"]
