
# This file describes the package that you'll build

[build-system]  # build backend configuration
requires = ["setuptools >= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]   # project/package description
name = "realpython-django-receipts"
version = "1.1.0"
description = "Sample installable django app"
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
# packages which where used - can be used by -m pip install
dependencies = [
    "Django>=4.2",
]

[project.urls]
Repository = "https://github.com/realpython/django-receipts"
# packages, which were used just to build that package -m pip install realpython-django-receipts[dev]
[project.optional-dependencies]
dev = [
    "build==1.2.1",
    "nox==2024.4.15",
    "twine==5.1.1",
]